--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joojdev's Skin Creator</title>
   <script src="./main.js" defer></script>
-  <style>
-    canvas, img {
-      image-rendering: crisp-edges;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: -o-crisp-edges;
-      image-rendering: -webkit-optimize-contrast;
-      -ms-interpolation-mode: nearest-neighbor;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <h1>Joojdev's Skin Creator</h1>
+
+  <fieldset>
+    <legend><h2>How it works</h2></legend>
+
+    <img src="./images/how-it-works.png" alt="Image showing the process of creating the skin.">
+  </fieldset>
 
   <form id="mainForm">
     <fieldset>
